More memory tunings